--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,17 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="/socket.io/socket.io.js"></script>
     <script src="https://d3js.org/d3.v5.min.js"></script>
-    <link href="style.css" rel="stylesheet"/>
-    <script src="http://localhost:8888/script/client.js" type="text/javascript"></script>
+    <link href="/script/style.css" rel="stylesheet"/>
+    <script src="/script/client.js" type="text/javascript"></script>
 
     <title>GrHex</title>
 </head>
 
 <body>
 
-
-        <svg id="jeu"></svg>
-        
+<svg id="jeu"></svg>    
 
 </body>
 </html>
