Damier dans une div scrollable

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,7 +13,17 @@
 
 <body>
 
-<svg id="jeu"></svg>    
+    <div class="droite">
+
+    </div>
+
+    <div class="haut">
+        
+    </div>
+
+    <div class="damier">
+        <svg id="jeu"></svg>
+    </div>
 
 </body>
 </html>
