--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,6 +20,9 @@
 
     <div class="partie">
         <div class="droite">
+            <div class="mini-map">
+                <svg id="mini"></svg>
+            </div>
             <div class="bouton1">
                 <button>
                     Fin de tour
