--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,6 +7,7 @@
     <script src="https://d3js.org/d3.v5.min.js"></script>
     <link href="/script/style.css" rel="stylesheet"/>
     <script src="/script/client.js" type="text/javascript"></script>
+    <script src="/script/affichage.js" type="text/javascript"></script>
 
     <title>GrHex</title>
 </head>
@@ -34,7 +35,7 @@
             <table id="listeJoueurs">
                 <tr>
                     <th>
-                        ID partie 
+                        nom partie 
                     </th>
                     <th>
                         nombre de tours
@@ -55,22 +56,31 @@
 
     </div>
 
-    <div class="rejoindrePartie" id="rejoindrePartie" >
-        <div class="droite">
-            <fieldset>
-                <div>
-                    <input type="radio" name="cite" id="beotie" checked value="beotie"/>
+    <div class="rejoindrePartie" id="" >
+        <div class="droite" id="droiteAll">
+
+
+            <label for="nbTours">Pseudo</label>
+            <input type="text" id="usernameInput" maxlength="15" required>
+            
+            <fieldset class="fieldMoche" >
+
+                <div class="radioInput">
+                    <input type="radio" name="cite" id="beotie"   value="beotie"/>
                     <label for="beotie" > Béotie </label>
                 </div>
-                <div>
+                <div class="radioInput">
                     <input type="radio" name="cite" id="attique" value="attique"/>
                     <label for="attique" > Attique </label>
                 </div>
-                <div>
+                <div class="radioInput">
                     <input type="radio" id="argolide" name="cite" value="argolide"/>
                     <label for="argolide" > Argolide </label>
                 </div>
             </fieldset>
+            <button id="rejoindrePartie">
+                Rejoindre
+            </button>
 
         </div>
         <div class="haut">
@@ -82,6 +92,8 @@
                     Menu
                 </button>
             </div>
+            <div id="nomPartie"></div>
+            <div> </div> 
         </div>
 
         <div class="damier" id="damierPrev">
@@ -104,7 +116,7 @@
 
         <div class="haut">
             <div class="bouton2">
-                <button id="1">
+                <button id="1" >
                     Quitter
                 </button>
                 <button>
