changements front mal ajoutés au push d'avant

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -125,10 +125,10 @@
             </div>
         </div>
 
-        <div class="damier" id="damier">
+        <div class="damier" id="damierjeu">
             <svg id="jeu"></svg>
         </div>
-    </div>
+</div>
 
 
 </body>
