ajout statsUnite, réecriture de afficherUnites avec D3, ajout commentaire

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -107,6 +107,9 @@
             <div class="mini-map">
                 <svg id="mini"></svg>
             </div>
+            <div id="statsUnite">
+            </div>
+
             <div class="bouton1">
                 <button>
                     Fin de tour
