Déplacement scroll damier (je css apres)

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -91,6 +91,18 @@
                 <button>
                     Menu
                 </button>
+                <button id="btndroite">
+                    Droite
+                </button>
+                <button id="btnbas">
+                    Bas
+                </button>
+                <button id="btngauche">
+                    Gauche
+                </button>
+                <button id="btnhaut">
+                    Haut
+                </button>
             </div>
             <div id="nomPartie"></div>
             <div> </div> 
@@ -135,6 +147,18 @@
                 </button>
                 <button>
                     Menu
+                </button>
+                <button id="btndroite">
+                    Droite
+                </button>
+                <button id="btnbas">
+                    Bas
+                </button>
+                <button id="btngauche">
+                    Gauche
+                </button>
+                <button id="btnhaut">
+                    Haut
                 </button>
             </div>
         </div>
