--- a/frontend/index.html
+++ b/frontend/index.html
@@ -122,7 +122,7 @@
             </div>
 
             <div class="bouton1">
-                <button>
+                <button id="fintour">
                     Fin de tour
                 </button>
             </div>
