--- a/frontend/index.html
+++ b/frontend/index.html
@@ -143,6 +143,7 @@
                     Menu
                 </button>
             </div>
+            <div class="ressources"></div>
         </div>
 
         <div class="damier" id="damierjeu">
