--- a/frontend/index.html
+++ b/frontend/index.html
@@ -142,6 +142,10 @@
                 <button class="buttonretro">
                     Menu
                 </button>
+
+                <button class="buttonretro">
+                    batiments
+                </button>
             </div>
         </div>
 
