construction de bâtiments

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -127,6 +127,11 @@
             </div>
             <div id="statsUnite">
             </div>
+
+            
+            <div id="vueBatiments">
+            
+            </div>
             <div class="bouton1">
                 <button id="finTour" class="buttonretro">
                     Fin de tour
@@ -142,10 +147,6 @@
                 <button class="buttonretro">
                     Menu
                 </button>
-
-                <button class="buttonretro">
-                    batiments
-                </button>
             </div>
             <div class="ressources"></div>
         </div>
@@ -158,7 +159,6 @@
     <div id="vueInfoHdv">
 
     </div>
-
 
 </body>
 </html>
