fin de game coté client

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -153,11 +153,9 @@
 
         <div class="damier" id="damierjeu">
             <svg id="jeu"></svg>
+            <div id="vueInfoHdv"></div>
+            <div id="vueFin"></div>
         </div>
-    </div>
-
-    <div id="vueInfoHdv">
-
     </div>
 
 </body>
