quitter fonctionne, menu supprimé

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -95,15 +95,14 @@
         </div>
         <div class="haut">
             <div class="bouton2">
-                <button id="1" class="buttonretro">
+                <button id="quitter1" class="buttonretro">
                     Quitter
                 </button>
-                <button class="buttonretro">
-                    Menu
-                </button>
+                
             </div>
             <div id="nomPartie"></div>
             <div> </div>
+
         </div>
 
         <div class="damier" id="damierPrev">
@@ -153,11 +152,8 @@
 
         <div class="haut">
             <div class="bouton2">
-                <button id="1" class="buttonretro">
+                <button id="quitter2" class="buttonretro">
                     Quitter
-                </button>
-                <button class="buttonretro">
-                    Menu
                 </button>
             </div>
             <div class="ressources"></div>
