fonction animation recolte ressources + sprites associés

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -155,6 +155,7 @@
                 <button id="quitter2" class="buttonretro">
                     Quitter
                 </button>
+                <!-- <button id="recolteButton">Test</button> -->
             </div>
             <div class="ressources"></div>
         </div>
