quitter fixé, filtre différé

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,7 +15,7 @@
 
 <body>
 
-    <div class="accueil">
+    <div class="accueil" id="accueil">
 
         <h1 id="titreP2">Creer une nouvelle partie</h1>
         <div id="form2">
@@ -57,7 +57,7 @@
 
     </div>
 
-    <div class="rejoindrePartie" id="">
+    <div class="rejoindrePartie" id="rejoindrePartie">
         <div class="direction1">
             <button id="btngauche" class="fleche left"></button>
             <button id="btndroite" class="fleche right"></button>
@@ -111,7 +111,7 @@
     </div>
 
 
-    <div class="partie">
+    <div class="partie" id="partie">
         <div class="direction1">
             <button id="btngauche" class="fleche left"></button>
             <button id="btndroite" class="fleche right"></button>
