--- a/frontend/index.html
+++ b/frontend/index.html
@@ -97,7 +97,12 @@
         <div class="damier" id="damierjeu">
             
             <svg id="jeu"></svg>
-            <div id="vueInfoHdv"></div>
+            <div id="vueInfoHdv">
+                <img src="/img/personnages/rouge/builder.png" alt="Builder" height="100px" width="100px"/>
+                <button id="bouttonHdv" class="buttonretro">
+                    Recruter un ouvrier
+                </button>
+            </div>
             <div id="vueFin"></div>
 
             <div id="vueBatiments"></div>
