--- a/frontend/index.html
+++ b/frontend/index.html
@@ -69,7 +69,7 @@
             <svg id="jeuprev"></svg>
             <div class="dialoguebox">
                 <div id="textedialogue">
-                    <p>Bienvenue dans le peloponnese, sélectionne la cité dont tu souhaites devenir le stratège!</p>
+                    <p>Bienvenue dans le péloponnèse. Commence par sélectionner la cité dont tu souhaites devenir le stratège !</p>
                     <div class="choixdialogue">
                         <p id="beotie" class="choix-cite" tabindex="0">Béotie</p>
                         <p id="attique" class="choix-cite" tabindex="0">Attique</p>
