--- a/frontend/index.html
+++ b/frontend/index.html
@@ -103,6 +103,10 @@
                     Recruter un ouvrier
                 </button>
             </div>
+
+            <div id="vueForge">
+                
+            </div>
             <div id="vueFin"></div>
 
             <div id="vueBatiments"></div>
