--- a/frontend/index.html
+++ b/frontend/index.html
@@ -104,9 +104,8 @@
                 </button>
             </div>
 
-            <div id="vueForge">
-                
-            </div>
+            <div id="vueForge"></div>
+            <div id="vueChamp"></div>
             <div id="vueFin"></div>
 
             <div id="vueBatiments"></div>
