je deteste le css

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -105,7 +105,13 @@
             </div>
 
             <div id="vueForge"></div>
-            <div id="vueChamp"></div>
+            <div id="vueChamp">
+                <div class="hautvue">
+                    <p id="txthautvue"> Gestionnaire du champ </p>
+                    <button id="bouttonChamp" class="buttonblack" onclick="document.getElementById('vueChamp').style.display = (document.getElementById('vueChamp').style.display == 'none' ? 'block' : 'none');">Quitter</button>
+                </div>
+            </div>
+            </div>
             <div id="vueFin"></div>
 
             <div id="vueBatiments"></div>
