--- a/frontend/index.html
+++ b/frontend/index.html
@@ -102,10 +102,6 @@
                     <p id="txthautvue"> Gestionnaire de l'HDV </p>
                     <button id="bouttonChamp" class="buttonblack" onclick="document.getElementById('vueInfoHdv').style.display = (document.getElementById('vueInfoHdv').style.display == 'none' ? 'block' : 'none');">Quitter</button>
                 </div>
-                <img src="/img/personnages/rouge/ouvrier.png" alt="Builder" height="100px" width="100px"/>
-                <button id="bouttonHdv" class="buttonblack">
-                    Recruter un ouvrier
-                </button>
             </div>
 
             <div id="vueForge">
@@ -119,6 +115,7 @@
                     <p id="txthautvue"> Gestionnaire du champ </p>
                     <button id="bouttonChamp" class="buttonblack" onclick="document.getElementById('vueChamp').style.display = (document.getElementById('vueChamp').style.display == 'none' ? 'block' : 'none');">Quitter</button>
                 </div>
+                <p class="txtchamp"></p>
             </div>
             </div>
             <div id="vueFin"></div>
