Fonction dialogue + fin de partie modif

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -118,7 +118,7 @@
                 <p class="txtchamp"></p>
             </div>
             </div>
-            <div id="vueFin"></div>
+            <div id="vueDialogue"></div>
 
             <div id="vueBatiments"></div>
 
