--- a/frontend/index.html
+++ b/frontend/index.html
@@ -87,10 +87,13 @@
 
         <div class="haut">
             <div class="ressources"></div>
+            <button id="afficherNotif">📧</button>
+
             <button id="finTour" class="buttonblack">Fin de tour</button>
             <div class="txtfintour">
                 <p></p>
             </div>
+
             <button id="quitter2" class="buttonblack">Quitter la partie</button>
         </div>
 
@@ -121,6 +124,14 @@
             <div id="vueFin"></div>
 
             <div id="vueBatiments"></div>
+
+            <div id="vueNotifications">
+                
+            </div>
+
+            <div id="notificationDetail">
+                
+            </div>
 
             <div id="statsUnite">
                 <img id="uniteImage" src="" width="180" height="150" />
