--- a/frontend/index.html
+++ b/frontend/index.html
@@ -120,6 +120,12 @@
                 </div>
                 <p class="txtchamp"></p>
             </div>
+            <div id="vueMine">
+                <div class="hautvue">
+                    <p id="txthautvue"> Vue de la mine </p>
+                    <button id="bouttonMine" class="buttonblack" onclick="document.getElementById('vueMine').style.display = (document.getElementById('vueMine').style.display == 'none' ? 'block' : 'none');">Quitter</button>
+                </div>
+            </div>
             </div>
             <div id="vueDialogue"></div>
 
