--- a/frontend/index.html
+++ b/frontend/index.html
@@ -87,7 +87,7 @@
 
         <div class="haut">
             <div class="ressources"></div>
-            <button id="afficherNotif">📧</button>
+            <button id="afficherNotif">✉️</button>
 
             <button id="finTour" class="buttonblack">Fin de tour</button>
             <div class="txtfintour">
