feature : mail vers une cite

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -132,9 +132,10 @@
                         
                     </form>
 
-                    <input type="text" placeholder="Objet"/> <br>
+                    <input type="text" placeholder="Objet" id="objetMail"/> <br>
     
-                    <textarea ></textarea>
+                    <textarea id="contenuMail"></textarea>
+                    <button id="envoyerMail">Envoyer</button>
                 </div>
             </div>
 
