fix : bug selection de l'input et textarea

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -102,7 +102,7 @@
 
             <svg id="jeu"></svg>
             <div id="vueInfoHdv">
-                <div class="hautvue">
+                <div class="hautvue" id="titreVueHdv">
                     <p id="txthautvue"> Gestionnaire de l'HDV </p>
 
                     <button id="bouttonOuvrier" class="buttonblack">Ouvrier</button>
