feature : indiquation du minerai de la mine

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -107,7 +107,8 @@
 
                     <button id="bouttonOuvrier" class="buttonblack">Ouvrier</button>
                     <button id="bouttonDiplomatie" class="buttonblack">Diplomatie</button>
-
+                    <button id="bouttonOnglet3" class="buttonblack">Onglet 3</button>
+                    <button id="bouttonOnglet4" class="buttonblack">Onglet 4</button>
 
                     <button id="bouttonChamp" class="buttonblack"
                         onclick="document.getElementById('vueInfoHdv').style.display = (document.getElementById('vueInfoHdv').style.display == 'none' ? 'block' : 'none');">Quitter</button>
@@ -160,6 +161,8 @@
                     <button id="bouttonMine" class="buttonblack"
                         onclick="document.getElementById('vueMine').style.display = (document.getElementById('vueMine').style.display == 'none' ? 'block' : 'none');">Quitter</button>
                 </div>
+                <div id="titreVueMine"></div>
+
             </div>
         </div>
         <div id="vueDialogue"></div>
