feature : recrutement espion

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -107,7 +107,7 @@
 
                     <button id="bouttonOuvrier" class="buttonblack">Ouvrier</button>
                     <button id="bouttonDiplomatie" class="buttonblack">Diplomatie</button>
-                    <button id="bouttonOnglet3" class="buttonblack">Onglet 3</button>
+                    <button id="bouttonEspionnage" class="buttonblack">Espionnage</button>
                     <button id="bouttonOnglet4" class="buttonblack">Onglet 4</button>
 
                     <button id="bouttonChamp" class="buttonblack"
@@ -137,6 +137,12 @@
     
                     <textarea id="contenuMail"></textarea>
                     <button id="envoyerMail">Envoyer</button>
+                </div>
+
+                <div id="vueEspionnage">
+                    <p>Coût pour recruter un espion 10 ors</p>
+                    <button id="bouttonRecruter">Recruter un espion</button>
+
                 </div>
             </div>
 
