--- a/frontend/index.html
+++ b/frontend/index.html
@@ -173,7 +173,8 @@
                     <label for="quantite">Quantité:</label>
                     <input type="number" id="mesQuantites" name="quantite" min="1" step="1"><br>
                 
-                    <form id="entreotsg">
+                    <p>Choisir mon entrepot</p>
+                    <form id="choisirEntrepot">
 
                     </form>
 
