modif vue lettres

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -247,8 +247,9 @@
 
         <div id="vueBatiments"></div>
 
-        <div id="vueNotifications">
-        </div>
+        <div id="vueNotifications"></div>
+
+        <div id="vueNotificationMessage"></div>
 
         <div id="notificationDetail">
 
