--- a/frontend/index.html
+++ b/frontend/index.html
@@ -88,6 +88,7 @@
 
         <div class="haut">
             <div class="ressources"></div>
+            <p id="placeUnEspionStp"></p>
             <button id="afficherNotif">✉️</button>
 
             <button id="finTour" class="buttonblack">Fin de tour</button>
