--- a/frontend/index.html
+++ b/frontend/index.html
@@ -33,6 +33,11 @@
             </select>
             <label for="nbTours">Nombre de tours</label>
             <input type="number" name="nbTours" min="5" step="1" id="nbTours" value="100">
+
+            <label >Choisir une map</label>
+            <select id="choisirMap">
+                
+            </select>
             <button id="creerPartie" onsubmit="return false">Creer</button>
         </div>
 
