fix : select mode + dialogue + css

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -277,6 +277,11 @@
                 <p id="position">Position : </p>
                 <p id="mov">Mouvement : </p>
                 <p id="uniteHp">Points de vie : </p>
+                <p id="uniteStrat">Stratégie : </p>
+                <div class="uniteMode">
+                    <select id="uniteMode"></select>
+                    <button id="uniteModeButton" class="buttonblack">Appliquer</button>
+                </div>
                 <p id="uniteAttack">Attaque : </p>
                 <p id="uniteDefence">Défense : </p>
                 <div id="uniteWood">Bois : </div>
