fix dimensions mapmaker + map xLine

--- a/mapmaker/frontend/index.html
+++ b/mapmaker/frontend/index.html
@@ -20,8 +20,8 @@
 
     <div class="partie">
         <div class="droite">
-                <input type="number" id="height" placeholder="height">
-                <input type="number" id="width" placeholder="width">
+                <input type="number" id="height" placeholder="width">
+                <input type="number" id="width" placeholder="height">
                 <button id="remakeMap" onclick="reloadMap()">Change !</button>
 
             <button id="1" onclick="paint()">
