--- a/mapmaker/frontend/index.html
+++ b/mapmaker/frontend/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-
+aze
     <div class="accueil">
         <!-- <input type="text" id="username" placeholder="Entrez votre nom"> -->
         <button id="0">Commencer le jeu</button>
