Placement des gisements et suppression d'unités dans le mapmaker

--- a/mapmaker/frontend/index.html
+++ b/mapmaker/frontend/index.html
@@ -46,6 +46,9 @@ aze
             <button id="1" onclick="placeunit()">
                 PlaceUnit🤺
             </button>
+            <button id="1" onclick="removeUni()">
+                Supprimer unité ❌
+            </button>
 
             <p>Changer position départ:</p>
             <button id="posBeotie" onclick="posBeotie()">
@@ -56,6 +59,17 @@ aze
             </button>
             <button id="posAttique" onclick="posAttique()">
                 Attique
+            </button>
+
+            <p>Placer des gisements</p>
+            <button id="copper" onclick="copper()">
+                Cuivre
+            </button>
+            <button id="tin" onclick="tin()">
+                Etain
+            </button>
+            <button id="remove" onclick="removeMinerai()">
+                Supprimer
             </button>
               
 
