container lette/tuto + sprites associés

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -97,7 +97,6 @@
         <div class="haut">
             <div class="ressources"></div>
             <p id="placeUnEspionStp"></p>
-            <button id="afficherNotif">✉️</button>
 
             <button id="finTour" class="buttonblack">Fin de tour</button>
             <div class="txtfintour">
@@ -108,6 +107,11 @@
         </div>
 
         <div class="damier" id="damierjeu">
+
+            <div class="gauche">
+                <img src="img/autre/lettre.png" id="afficherNotifs">
+                <img src="img/autre/livre.png">
+            </div>
 
             <svg id="jeu"></svg>
             <div id="vueInfoHdv">
