--- a/frontend/index.html
+++ b/frontend/index.html
@@ -89,7 +89,7 @@
 
     </div>
 
-    
+
     <!-- Partie -->
 
     <div class="partie" id="partie">
@@ -110,7 +110,51 @@
 
             <div class="gauche">
                 <img src="img/autre/lettre.png" id="afficherNotifs">
-                <img src="img/autre/livre.png">
+                <img src="img/autre/livre.png" id="afficherTutoriel">
+            </div>
+
+            <!-- Tutoriel -->
+
+            <div class="tutorielContainer" id="tuto">
+                <div class="titreTutoContainer">
+
+                    <div class="titreTuto1" id="">
+                        <div class="titreTutoImage">
+                            <img src="img/personnages/rouge/chantier.png" id="imgTutoChantier">
+                        </div>
+                        <div class="titreTutoText">
+                            <p id="titreTutoChantier">Construire un bâtiment</p>
+                        </div>
+                    </div>
+
+                    <div class="titreTuto2" id="">
+                        <div class="titreTutoImage">
+                            <img src="img/personnages/rouge/forge.png" id="imgTutoForge">
+                        </div>
+                        <div class="titreTutoText">
+                            <p id="titreTutoForge">Utiliser la forge</p>
+                        </div>
+                    </div>
+
+                    <div class="titreTuto1" id="">
+                        <div class="titreTutoImage">
+                            <img src="img/personnages/rouge/tour.png" id="imgTutoTour">
+                        </div>
+                        <div class="titreTutoText">
+                            <p id="titreTutoTour">Se repérer grâce aux tours</p>
+                        </div>
+                    </div>
+
+                    <div class="titreTuto2" id="">
+                        <div class="titreTutoImage">
+                            <img src="img/personnages/rouge/maison.png" id="imgTutoMaison">
+                        </div>
+                        <div class="titreTutoText">
+                            <p id="titreTutoMaison">L'utilité des maisons</p>
+                        </div>
+                    </div>
+
+                </div>
             </div>
 
             <svg id="jeu"></svg>
