feature : nouvelle interface d'échange

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -214,60 +214,63 @@
                     <!-- c'est la vue échange -->
                     <div id="flexEchange">
 
-                        <p>Mes ressources</p>
-                        <form id="mesRessourcesForm">
-                            <label for="bois">Bois:</label>
-                            <input type="radio" id="bois" name="mesRessources" value="wood"><br>
+                        <div class="echange-colonne">
+                            <p>Mes ressources</p>
+                            <form id="mesRessourcesForm">
+                                <label for="bois">Bois:</label>
+                                <input type="radio" id="bois" name="mesRessources" value="wood"><br>
 
-                            <label for="cuivre">Cuivre:</label>
-                            <input type="radio" id="cuivre" name="mesRessources" value="copper"><br>
+                                <label for="cuivre">Cuivre:</label>
+                                <input type="radio" id="cuivre" name="mesRessources" value="copper"><br>
 
-                            <label for="etain">Étain:</label>
-                            <input type="radio" id="etain" name="mesRessources" value="tin"><br>
+                                <label for="etain">Étain:</label>
+                                <input type="radio" id="etain" name="mesRessources" value="tin"><br>
 
-                            <label for="or">Or:</label>
-                            <input type="radio" id="or" name="mesRessources" value="or"><br>
+                                <label for="or">Or:</label>
+                                <input type="radio" id="or" name="mesRessources" value="or"><br>
 
-                            <label for="pierre">Pierre:</label>
-                            <input type="radio" id="pierre" name="mesRessources" value="stone"><br>
+                                <label for="pierre">Pierre:</label>
+                                <input type="radio" id="pierre" name="mesRessources" value="stone"><br>
 
-                        </form>
-                        <label for="quantite">Quantité:</label>
-                        <input type="number" id="mesQuantites" name="quantite" min="0" step="1" value="1"><br>
+                            </form>
+                            <label for="quantite">Quantité:</label>
+                            <input type="number" id="mesQuantites" name="quantite" min="0" step="1" value="1"><br>
 
-                        <p>Choisir mon entrepot</p>
-                        <form id="choisirEntrepot">
+                            <p>Choisir mon entrepot</p>
+                            <form id="choisirEntrepot">
 
-                        </form>
+                            </form>
+                        </div>
 
-                        <p>Villes Disponibles</p>
-                        <form id="selectionnerVille">
+                        <div class="echange-colonne">
+                            <p>Villes Disponibles</p>
+                            <form id="selectionnerVille">
 
-                        </form>
+                            </form>
 
-                        <p>Ressources Ennemies</p>
-                        <form id="ressourcesEnnemiesForm">
-                            <label for="bois">Bois:</label>
-                            <input type="radio" id="bois" name="ressourcesEnnemies" value="wood"><br>
+                            <p>Ressources Ennemies</p>
+                            <form id="ressourcesEnnemiesForm">
+                                <label for="bois">Bois:</label>
+                                <input type="radio" id="bois" name="ressourcesEnnemies" value="wood"><br>
 
-                            <label for="cuivre">Cuivre:</label>
-                            <input type="radio" id="cuivre" name="ressourcesEnnemies" value="copper"><br>
+                                <label for="cuivre">Cuivre:</label>
+                                <input type="radio" id="cuivre" name="ressourcesEnnemies" value="copper"><br>
 
-                            <label for="etain">Étain:</label>
-                            <input type="radio" id="etain" name="ressourcesEnnemies" value="tin"><br>
+                                <label for="etain">Étain:</label>
+                                <input type="radio" id="etain" name="ressourcesEnnemies" value="tin"><br>
 
-                            <label for="or">Or:</label>
-                            <input type="radio" id="or" name="ressourcesEnnemies" value="or"><br>
+                                <label for="or">Or:</label>
+                                <input type="radio" id="or" name="ressourcesEnnemies" value="or"><br>
 
-                            <label for="pierre">Pierre:</label>
-                            <input type="radio" id="pierre" name="ressourcesEnnemies" value="stone"><br>
+                                <label for="pierre">Pierre:</label>
+                                <input type="radio" id="pierre" name="ressourcesEnnemies" value="stone"><br>
 
-                        </form>
-                        <label for="quantite">Quantité:</label>
-                        <input type="number" id="quantitesEnnemies" name="quantite" min="0" step="1" value="1"><br>
+                            </form>
+                            <label for="quantite">Quantité:</label>
+                            <input type="number" id="quantitesEnnemies" name="quantite" min="0" step="1" value="1"><br>
 
-                        <button id="bouttonEchange" class="buttonblack">Proposer un échange</button>
-
+                            <button id="bouttonEchange" class="buttonblack">Proposer un échange</button>
+                        </div>
                     </div>
 
                 </div>
