json tuto dans gameDatas

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -116,9 +116,9 @@
             <!-- Tutoriel -->
 
             <div class="tutorielContainer" id="tuto">
-                <div class="titreTutoContainer">
 
-                    <div class="titreTuto1" id="">
+                <div class="titreTutoContainer">
+                    <div class="titreTuto1" id="tutoChantier">
                         <div class="titreTutoImage">
                             <img src="img/personnages/rouge/chantier.png" id="imgTutoChantier">
                         </div>
@@ -127,7 +127,7 @@
                         </div>
                     </div>
 
-                    <div class="titreTuto2" id="">
+                    <div class="titreTuto2" id="tutoForge">
                         <div class="titreTutoImage">
                             <img src="img/personnages/rouge/forge.png" id="imgTutoForge">
                         </div>
@@ -136,7 +136,7 @@
                         </div>
                     </div>
 
-                    <div class="titreTuto1" id="">
+                    <div class="titreTuto1" id="tutoTour">
                         <div class="titreTutoImage">
                             <img src="img/personnages/rouge/tour.png" id="imgTutoTour">
                         </div>
@@ -145,7 +145,7 @@
                         </div>
                     </div>
 
-                    <div class="titreTuto2" id="">
+                    <div class="titreTuto2" id="tutoMaison">
                         <div class="titreTutoImage">
                             <img src="img/personnages/rouge/maison.png" id="imgTutoMaison">
                         </div>
@@ -155,6 +155,11 @@
                     </div>
 
                 </div>
+
+                <div class="contenuTutoContainer">
+                    <p id="txttuto">Sélectionne un onglet pour en connaître son fonctionnement</p>
+                </div>
+
             </div>
 
             <svg id="jeu"></svg>
