Cheval de Troie implémenté

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -118,10 +118,10 @@
                 <div class="hautvue" id="titreVueHdv">
                     <p id="txthautvue"> Gestionnaire de l'HDV </p>
 
-                    <button id="bouttonOuvrier" class="buttonblack">Ouvrier</button>
+                    <button id="bouttonOuvrier" class="buttonblack">Recrutement</button>
                     <button id="bouttonDiplomatie" class="buttonblack">Diplomatie</button>
                     <button id="bouttonEspionnage" class="buttonblack">Espionnage</button>
-                    <button id="bouttonEspions" class="buttonblack">Échange</button>
+                    <button id="boutonEchange" class="buttonblack">Échange</button>
 
                     <button id="bouttonChamp" class="buttonblack"
                         onclick="document.getElementById('vueInfoHdv').style.display = (document.getElementById('vueInfoHdv').style.display == 'none' ? 'block' : 'none');">Quitter</button>
@@ -133,6 +133,14 @@
                         <p style="position: absolute; top: 0px; right: 0px; margin: 0px;">
                             30
                             <img src="/img/autre/or.png"
+                                style="height: 50px; margin-right: 10px; vertical-align: middle;">
+                        </p>
+                    </div>
+                    <div style="position: relative; display: inline-block; text-align: center; margin: 0px auto;">
+                        <img src="/img/personnages/rouge/cheval de troie.png" width="125" height="150" id="imgTroie">
+                        <p style="position: absolute; top: 0px; right: 0px; margin: 0px;">
+                            50
+                            <img src="/img/autre/bois.png"
                                 style="height: 50px; margin-right: 10px; vertical-align: middle;">
                         </p>
                     </div>
