vue echange réparée

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -121,7 +121,7 @@
                     <button id="bouttonOuvrier" class="buttonblack">Recrutement</button>
                     <button id="bouttonDiplomatie" class="buttonblack">Diplomatie</button>
                     <button id="bouttonEspionnage" class="buttonblack">Espionnage</button>
-                    <button id="boutonEchange" class="buttonblack">Échange</button>
+                    <button id="bouttonVueEchange" class="buttonblack">Échange</button>
 
                     <button id="bouttonChamp" class="buttonblack"
                         onclick="document.getElementById('vueInfoHdv').style.display = (document.getElementById('vueInfoHdv').style.display == 'none' ? 'block' : 'none');">Quitter</button>
@@ -174,7 +174,7 @@
 
                 </div>
 
-                <div id="vueEspions">
+                <div id="vueEchange">
                     <!-- c'est la vue échange -->
                     <div id="flexEchange">
 
