--- a/frontend/index.html
+++ b/frontend/index.html
@@ -264,6 +264,15 @@
                 <div id="titreVueMine"></div>
 
             </div>
+            <div id="vueTour">
+                <div class="hautvue">
+                    <p id="txthautvue"> Vue de la tour </p>
+                    <button id="boutonTour" class="buttonblack"
+                        onclick="document.getElementById('vueTour').style.display = (document.getElementById('vueTour').style.display == 'none' ? 'block' : 'none');">Quitter</button>
+                </div>
+                <div id="titreVueTour"></div>
+
+            </div>
         </div>
         <div id="vueDialogue"></div>
 
